# strawberry-autograph

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
strawberry_autograph/: __init__.py  main.py
